[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloombuddy-ml-api"
version = "1.0.0"
description = "BloomBuddy ML API Backend"
requires-python = ">=3.9,<3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "numpy==1.24.4",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "gunicorn==21.2.0",
]
